@@ -3872,11 +3872,13 @@ static void	zbx_extract_functionids(zbx_vector_uint64_t *functionids, zbx_vector
 
 typedef struct
 {
-	zbx_uint64_t	functionid;
-	zbx_uint64_t	triggerid;
+	/* input data */
+	zbx_uint64_t	itemid;
 	char		*function;
 	char		*parameter;
 	zbx_timespec_t	timespec;
+
+	/* output data */
 	char		*value;
 	char		*error;
 }
@@ -3884,13 +3886,57 @@ zbx_func_t;
 
 typedef struct
 {
-	zbx_uint64_t		itemid;
-	zbx_vector_ptr_t	functions;
+	zbx_uint64_t	functionid;
+	zbx_func_t	*func;
 }
 zbx_ifunc_t;
 
-static void	zbx_populate_function_items(zbx_vector_uint64_t *functionids, zbx_hashset_t *ifuncs,
-		zbx_vector_ptr_t *triggers)
+static zbx_hash_t	func_hash_func(const void *data)
+{
+	const zbx_func_t	*func = (const zbx_func_t *)data;
+	zbx_hash_t		hash;
+
+	hash = ZBX_DEFAULT_UINT64_HASH_FUNC(&func->itemid);
+	hash = ZBX_DEFAULT_STRING_HASH_ALGO(func->function, strlen(func->function), hash);
+	hash = ZBX_DEFAULT_STRING_HASH_ALGO(func->parameter, strlen(func->parameter), hash);
+	hash = ZBX_DEFAULT_HASH_ALGO(&func->timespec.sec, sizeof(func->timespec.sec), hash);
+	hash = ZBX_DEFAULT_HASH_ALGO(&func->timespec.ns, sizeof(func->timespec.ns), hash);
+
+	return hash;
+}
+
+static int	func_compare_func(const void *d1, const void *d2)
+{
+	const zbx_func_t	*func1 = (const zbx_func_t *)d1;
+	const zbx_func_t	*func2 = (const zbx_func_t *)d2;
+	int			ret;
+
+	ZBX_RETURN_IF_NOT_EQUAL(func1->itemid, func2->itemid);
+
+	if (0 != (ret = strcmp(func1->function, func2->function)))
+		return ret;
+
+	if (0 != (ret = strcmp(func1->parameter, func2->parameter)))
+		return ret;
+
+	ZBX_RETURN_IF_NOT_EQUAL(func1->timespec.sec, func2->timespec.sec);
+	ZBX_RETURN_IF_NOT_EQUAL(func1->timespec.ns, func2->timespec.ns);
+
+	return 0;
+}
+
+static void	func_clean(void *ptr)
+{
+	zbx_func_t	*func = (zbx_func_t *)ptr;
+
+	zbx_free(func->function);
+	zbx_free(func->parameter);
+	zbx_free(func->value);
+	zbx_free(func->error);
+}
+
+static void	zbx_populate_function_items(zbx_vector_uint64_t *functionids, zbx_hashset_t *funcs,
+		zbx_hashset_t *ifuncs, zbx_vector_ptr_t *triggers)
 {
 	const char	*__function_name = "zbx_populate_function_items";
 
@@ -3898,10 +3944,13 @@ static void	zbx_populate_function_items(zbx_vector_uint64_t *functionids, zbx_ha
 	DC_TRIGGER	*tr;
 	DC_FUNCTION	*functions = NULL;
 	int		*errcodes = NULL;
-	zbx_ifunc_t	*ifunc;
-	zbx_func_t	*func;
+	zbx_ifunc_t	ifunc_local;
+	zbx_func_t	*func, func_local;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() functionids_num:%d", __function_name, functionids->values_num);
+
+	func_local.value = NULL;
+	func_local.error = NULL;
 
 	functions = zbx_malloc(functions, sizeof(DC_FUNCTION) * functionids->values_num);
 	errcodes = zbx_malloc(errcodes, sizeof(int) * functionids->values_num);
@@ -3913,34 +3962,33 @@ static void	zbx_populate_function_items(zbx_vector_uint64_t *functionids, zbx_ha
 		if (SUCCEED != errcodes[i])
 			continue;
 
-		if (NULL == (ifunc = zbx_hashset_search(ifuncs, &functions[i].itemid)))
-		{
-			zbx_ifunc_t	new_ifunc;
+		func_local.itemid = functions[i].itemid;
 
-			new_ifunc.itemid = functions[i].itemid;
-			zbx_vector_ptr_create(&new_ifunc.functions);
-			ifunc = zbx_hashset_insert(ifuncs, &new_ifunc, sizeof(zbx_ifunc_t));
-		}
-
-		func = zbx_malloc(NULL, sizeof(zbx_func_t));
-
-		func->functionid = functions[i].functionid;
-		func->triggerid = functions[i].triggerid;
-		func->function = zbx_strdup(NULL, functions[i].function);
-		func->parameter = zbx_strdup(NULL, functions[i].parameter);
-		func->timespec.sec = 0;
-		func->timespec.ns = 0;
-		func->value = NULL;
-		func->error = NULL;
-
-		if (FAIL != (j = zbx_vector_ptr_bsearch(triggers, &func->triggerid,
+		if (FAIL != (j = zbx_vector_ptr_bsearch(triggers, &functions[i].triggerid,
 				ZBX_DEFAULT_UINT64_PTR_COMPARE_FUNC)))
 		{
 			tr = (DC_TRIGGER *)triggers->values[j];
-			func->timespec = tr->timespec;
+			func_local.timespec = tr->timespec;
+		}
+		else
+		{
+			func_local.timespec.sec = 0;
+			func_local.timespec.ns = 0;
 		}
 
-		zbx_vector_ptr_append(&ifunc->functions, func);
+		func_local.function = functions[i].function;
+		func_local.parameter = functions[i].parameter;
+
+		if (NULL == (func = zbx_hashset_search(funcs, &func_local)))
+		{
+			func = zbx_hashset_insert(funcs, &func_local, sizeof(func_local));
+			func->function = zbx_strdup(NULL, func_local.function);
+			func->parameter = zbx_strdup(NULL, func_local.parameter);
+		}
+
+		ifunc_local.functionid = functions[i].functionid;
+		ifunc_local.func = func;
+		zbx_hashset_insert(ifuncs, &ifunc_local, sizeof(ifunc_local));
 	}
 
 	DCconfig_clean_functions(functions, errcodes, functionids->values_num);
@@ -3951,131 +3999,130 @@ static void	zbx_populate_function_items(zbx_vector_uint64_t *functionids, zbx_ha
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() ifuncs_num:%d", __function_name, ifuncs->num_data);
 }
 
-static void	zbx_evaluate_item_functions(zbx_hashset_t *ifuncs, zbx_vector_ptr_t *unknown_msgs)
+static void	zbx_evaluate_item_functions(zbx_hashset_t *funcs, zbx_vector_ptr_t *unknown_msgs)
 {
 	const char	*__function_name = "zbx_evaluate_item_functions";
 
 	DC_ITEM			*items = NULL;
 	char			value[MAX_BUFFER_LEN], *error = NULL;
-	int			i, k;
-	zbx_ifunc_t		*ifunc;
+	int			i;
 	zbx_func_t		*func;
-	zbx_uint64_t		*itemids = NULL;
+	zbx_vector_uint64_t	itemids;
 	int			*errcodes = NULL;
 	zbx_hashset_iter_t	iter;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s() ifuncs_num:%d", __function_name, ifuncs->num_data);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() funcs_num:%d", __function_name, funcs->num_data);
 
-	itemids = zbx_malloc(itemids, (size_t)ifuncs->num_data * sizeof(zbx_uint64_t));
+	zbx_vector_uint64_create(&itemids);
+	zbx_vector_uint64_reserve(&itemids, funcs->num_data);
 
-	zbx_hashset_iter_reset(ifuncs, &iter);
-	for (i = 0; NULL != (ifunc = zbx_hashset_iter_next(&iter)); i++)
-		itemids[i] = ifunc->itemid;
+	zbx_hashset_iter_reset(funcs, &iter);
+	while (NULL != (func = zbx_hashset_iter_next(&iter)))
+		zbx_vector_uint64_append(&itemids, func->itemid);
 
-	items = zbx_malloc(items, sizeof(DC_ITEM) * (size_t)ifuncs->num_data);
-	errcodes = zbx_malloc(errcodes, sizeof(int) * (size_t)ifuncs->num_data);
+	zbx_vector_uint64_sort(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+	zbx_vector_uint64_uniq(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
 
-	DCconfig_get_items_by_itemids(items, itemids, errcodes, ifuncs->num_data);
+	items = zbx_malloc(items, sizeof(DC_ITEM) * (size_t)funcs->num_data);
+	errcodes = zbx_malloc(errcodes, sizeof(int) * (size_t)funcs->num_data);
 
-	zbx_free(itemids);
+	DCconfig_get_items_by_itemids(items, itemids.values, errcodes, itemids.values_num);
 
-	zbx_hashset_iter_reset(ifuncs, &iter);
-	for (i = 0; NULL != (ifunc = zbx_hashset_iter_next(&iter)); i++)
+	zbx_hashset_iter_reset(funcs, &iter);
+	while (NULL != (func = zbx_hashset_iter_next(&iter)))
 	{
-		for (k = 0; k < ifunc->functions.values_num; k++)
+		int	ret_unknown = 0;	/* flag raised if current function evaluates to ZBX_UNKNOWN */
+		char	*unknown_msg;
+
+		i = zbx_vector_uint64_bsearch(&itemids, func->itemid, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+
+		if (SUCCEED != errcodes[i])
 		{
-			int	ret_unknown = 0;	/* flag raised if current function evaluates to ZBX_UNKNOWN */
-			char	*unknown_msg;
+			func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s(%s)\":"
+					" item does not exist.",
+					func->function, func->parameter);
+			continue;
+		}
 
-			func = (zbx_func_t *)ifunc->functions.values[k];
+		/* do not evaluate if the item is disabled or belongs to a disabled host */
 
-			if (SUCCEED != errcodes[i])
+		if (ITEM_STATUS_ACTIVE != items[i].status)
+		{
+			func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s:%s.%s(%s)\":"
+					" item is disabled.",
+					items[i].host.host, items[i].key_orig, func->function, func->parameter);
+			continue;
+		}
+
+		if (HOST_STATUS_MONITORED != items[i].host.status)
+		{
+			func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s:%s.%s(%s)\":"
+					" item belongs to a disabled host.",
+					items[i].host.host, items[i].key_orig, func->function, func->parameter);
+			continue;
+		}
+
+		/* If the item is NOTSUPPORTED then evaluation is allowed for:   */
+		/*   - time-based functions and nodata(). Their values can be    */
+		/*     evaluated to regular numbers even for NOTSUPPORTED items. */
+		/*   - other functions. Result of evaluation is ZBX_UNKNOWN.     */
+
+		if (ITEM_STATE_NOTSUPPORTED == items[i].state &&
+				FAIL == evaluatable_for_notsupported(func->function))
+		{
+			/* compose and store 'unknown' message for future use */
+			unknown_msg = zbx_dsprintf(NULL,
+					"Cannot evaluate function \"%s:%s.%s(%s)\": item is not supported.",
+					items[i].host.host, items[i].key_orig, func->function, func->parameter);
+
+			zbx_free(func->error);
+			zbx_vector_ptr_append(unknown_msgs, unknown_msg);
+			ret_unknown = 1;
+		}
+
+		if (0 == ret_unknown && SUCCEED != evaluate_function(value, &items[i], func->function,
+				func->parameter, func->timespec.sec, &error))
+		{
+			/* compose and store error message for future use */
+			if (NULL != error)
 			{
-				func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s(%s)\":"
-						" item does not exist.",
-						func->function, func->parameter);
-				continue;
-			}
-
-			/* do not evaluate if the item is disabled or belongs to a disabled host */
-
-			if (ITEM_STATUS_ACTIVE != items[i].status)
-			{
-				func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s:%s.%s(%s)\":"
-						" item is disabled.",
-						items[i].host.host, items[i].key_orig, func->function, func->parameter);
-				continue;
-			}
-
-			if (HOST_STATUS_MONITORED != items[i].host.status)
-			{
-				func->error = zbx_dsprintf(func->error, "Cannot evaluate function \"%s:%s.%s(%s)\":"
-						" item belongs to a disabled host.",
-						items[i].host.host, items[i].key_orig, func->function, func->parameter);
-				continue;
-			}
-
-			/* If the item is NOTSUPPORTED then evaluation is allowed for:   */
-			/*   - time-based functions and nodata(). Their values can be    */
-			/*     evaluated to regular numbers even for NOTSUPPORTED items. */
-			/*   - other functions. Result of evaluation is ZBX_UNKNOWN.     */
-
-			if (ITEM_STATE_NOTSUPPORTED == items[i].state &&
-					FAIL == evaluatable_for_notsupported(func->function))
-			{
-				/* compose and store 'unknown' message for future use */
 				unknown_msg = zbx_dsprintf(NULL,
-						"Cannot evaluate function \"%s:%s.%s(%s)\": item is not supported.",
-						items[i].host.host, items[i].key_orig, func->function, func->parameter);
+						"Cannot evaluate function \"%s:%s.%s(%s)\": %s.",
+						items[i].host.host, items[i].key_orig, func->function,
+						func->parameter, error);
 
 				zbx_free(func->error);
-				zbx_vector_ptr_append(unknown_msgs, unknown_msg);
-				ret_unknown = 1;
-			}
-
-			if (0 == ret_unknown && SUCCEED != evaluate_function(value, &items[i], func->function,
-					func->parameter, func->timespec.sec, &error))
-			{
-				/* compose and store error message for future use */
-				if (NULL != error)
-				{
-					unknown_msg = zbx_dsprintf(NULL,
-							"Cannot evaluate function \"%s:%s.%s(%s)\": %s.",
-							items[i].host.host, items[i].key_orig, func->function,
-							func->parameter, error);
-
-					zbx_free(func->error);
-					zbx_free(error);
-				}
-				else
-				{
-					unknown_msg = zbx_dsprintf(NULL,
-							"Cannot evaluate function \"%s:%s.%s(%s)\".",
-							items[i].host.host, items[i].key_orig,
-							func->function, func->parameter);
-
-					zbx_free(func->error);
-				}
-
-				zbx_vector_ptr_append(unknown_msgs, unknown_msg);
-				ret_unknown = 1;
-			}
-
-			if (0 == ret_unknown)
-			{
-				func->value = zbx_strdup(func->value, value);
+				zbx_free(error);
 			}
 			else
 			{
-				/* write a special token of unknown value with 'unknown' message number, like */
-				/* ZBX_UNKNOWN0, ZBX_UNKNOWN1 etc. not wrapped in () */
-				func->value = zbx_dsprintf(func->value, ZBX_UNKNOWN_STR "%d",
-						unknown_msgs->values_num - 1);
+				unknown_msg = zbx_dsprintf(NULL,
+						"Cannot evaluate function \"%s:%s.%s(%s)\".",
+						items[i].host.host, items[i].key_orig,
+						func->function, func->parameter);
+
+				zbx_free(func->error);
 			}
+
+			zbx_vector_ptr_append(unknown_msgs, unknown_msg);
+			ret_unknown = 1;
+		}
+
+		if (0 == ret_unknown)
+		{
+			func->value = zbx_strdup(func->value, value);
+		}
+		else
+		{
+			/* write a special token of unknown value with 'unknown' message number, like */
+			/* ZBX_UNKNOWN0, ZBX_UNKNOWN1 etc. not wrapped in () */
+			func->value = zbx_dsprintf(func->value, ZBX_UNKNOWN_STR "%d",
+					unknown_msgs->values_num - 1);
 		}
 	}
 
-	DCconfig_clean_items(items, errcodes, ifuncs->num_data);
+	DCconfig_clean_items(items, errcodes, itemids.values_num);
+	zbx_vector_uint64_destroy(&itemids);
 
 	zbx_free(errcodes);
 	zbx_free(items);
@@ -4083,21 +4130,14 @@ static void	zbx_evaluate_item_functions(zbx_hashset_t *ifuncs, zbx_vector_ptr_t 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
-typedef struct
-{
-	zbx_uint64_t	functionid;
-	zbx_func_t	*function;
-}
-zbx_func_index_t;
-
-static int	substitute_expression_functions_results(zbx_hashset_t *func_index, char *expression, char **out,
+static int	substitute_expression_functions_results(zbx_hashset_t *ifuncs, char *expression, char **out,
 		size_t *out_alloc, char **error)
 {
 	char			*br, *bl;
 	size_t			out_offset = 0;
 	zbx_uint64_t		functionid;
-	zbx_func_index_t	*func_index_item;
 	zbx_func_t		*func;
+	zbx_ifunc_t		*ifunc;
 
 	for (br = expression, bl = strchr(expression, '{'); NULL != bl; bl = strchr(bl, '{'))
 	{
@@ -4118,14 +4158,14 @@ static int	substitute_expression_functions_results(zbx_hashset_t *func_index, ch
 		*br++ = '}';
 		bl = br;
 
-		if (NULL == (func_index_item = zbx_hashset_search(func_index, &functionid)))
+		if (NULL == (ifunc = zbx_hashset_search(ifuncs, &functionid)))
 		{
 			*error = zbx_dsprintf(*error, "Cannot obtain function"
 					" and item for functionid: " ZBX_FS_UI64, functionid);
 			return FAIL;
 		}
 
-		func = func_index_item->function;
+		func = ifunc->func;
 
 		if (NULL != func->error)
 		{
@@ -4162,28 +4202,9 @@ static void	zbx_substitute_functions_results(zbx_hashset_t *ifuncs, zbx_vector_p
 	char			*out = NULL;
 	size_t			out_alloc = TRIGGER_EXPRESSION_LEN_MAX;
 	int			i;
-	zbx_ifunc_t		*ifunc;
-	zbx_hashset_iter_t	iter;
-	zbx_hashset_t		func_index;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() ifuncs_num:%d tr_num:%d",
 			__function_name, ifuncs->num_data, triggers->values_num);
-
-	zbx_hashset_create(&func_index, ifuncs->num_data, ZBX_DEFAULT_UINT64_HASH_FUNC,
-			ZBX_DEFAULT_UINT64_COMPARE_FUNC);
-
-	zbx_hashset_iter_reset(ifuncs, &iter);
-	while (NULL != (ifunc = zbx_hashset_iter_next(&iter)))
-	{
-		zbx_func_index_t	item;
-
-		for (i = 0; i < ifunc->functions.values_num; i++)
-		{
-			item.function = (zbx_func_t *)ifunc->functions.values[i];
-			item.functionid = item.function->functionid;
-			zbx_hashset_insert(&func_index, &item, sizeof(zbx_func_index_t));
-		}
-	}
 
 	out = zbx_malloc(out, out_alloc);
 
@@ -4194,8 +4215,8 @@ static void	zbx_substitute_functions_results(zbx_hashset_t *ifuncs, zbx_vector_p
 		if (NULL != tr->new_error)
 			continue;
 
-		if( SUCCEED != substitute_expression_functions_results(&func_index, tr->expression, &out,
-				&out_alloc, &tr->new_error))
+		if( SUCCEED != substitute_expression_functions_results(ifuncs, tr->expression, &out, &out_alloc,
+				&tr->new_error))
 		{
 			tr->new_value = TRIGGER_VALUE_UNKNOWN;
 			continue;
@@ -4208,7 +4229,7 @@ static void	zbx_substitute_functions_results(zbx_hashset_t *ifuncs, zbx_vector_p
 
 		if (TRIGGER_RECOVERY_MODE_RECOVERY_EXPRESSION == tr->recovery_mode)
 		{
-			if (SUCCEED != substitute_expression_functions_results(&func_index,
+			if (SUCCEED != substitute_expression_functions_results(ifuncs,
 					tr->recovery_expression, &out, &out_alloc, &tr->new_error))
 			{
 				tr->new_value = TRIGGER_VALUE_UNKNOWN;
@@ -4223,34 +4244,8 @@ static void	zbx_substitute_functions_results(zbx_hashset_t *ifuncs, zbx_vector_p
 	}
 
 	zbx_free(out);
-	zbx_hashset_destroy(&func_index);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
-}
-
-static void	zbx_free_item_functions(zbx_hashset_t *ifuncs)
-{
-	int			i;
-	zbx_ifunc_t		*ifunc;
-	zbx_func_t		*func;
-	zbx_hashset_iter_t	iter;
-
-	zbx_hashset_iter_reset(ifuncs, &iter);
-
-	while (NULL != (ifunc = zbx_hashset_iter_next(&iter)))
-	{
-		for (i = 0; i < ifunc->functions.values_num; i++)
-		{
-			func = (zbx_func_t *)ifunc->functions.values[i];
-
-			zbx_free(func->function);
-			zbx_free(func->parameter);
-			zbx_free(func->value);
-			zbx_free(func->error);
-			zbx_free(func);
-		}
-		zbx_vector_ptr_destroy(&ifunc->functions);
-	}
 }
 
 /******************************************************************************
@@ -4273,7 +4268,7 @@ static void	substitute_functions(zbx_vector_ptr_t *triggers, zbx_vector_ptr_t *u
 	const char		*__function_name = "substitute_functions";
 
 	zbx_vector_uint64_t	functionids;
-	zbx_hashset_t		ifuncs;
+	zbx_hashset_t		ifuncs, funcs;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -4285,16 +4280,20 @@ static void	substitute_functions(zbx_vector_ptr_t *triggers, zbx_vector_ptr_t *u
 
 	zbx_hashset_create(&ifuncs, triggers->values_num, ZBX_DEFAULT_UINT64_HASH_FUNC,
 			ZBX_DEFAULT_UINT64_COMPARE_FUNC);
-	zbx_populate_function_items(&functionids, &ifuncs, triggers);
+
+	zbx_hashset_create_ext(&funcs, triggers->values_num, func_hash_func, func_compare_func, func_clean,
+				ZBX_DEFAULT_MEM_MALLOC_FUNC, ZBX_DEFAULT_MEM_REALLOC_FUNC, ZBX_DEFAULT_MEM_FREE_FUNC);
+
+	zbx_populate_function_items(&functionids, &funcs, &ifuncs, triggers);
 
 	if (0 != ifuncs.num_data)
 	{
-		zbx_evaluate_item_functions(&ifuncs, unknown_msgs);
+		zbx_evaluate_item_functions(&funcs, unknown_msgs);
 		zbx_substitute_functions_results(&ifuncs, triggers);
 	}
 
-	zbx_free_item_functions(&ifuncs);
 	zbx_hashset_destroy(&ifuncs);
+	zbx_hashset_destroy(&funcs);
 empty:
 	zbx_vector_uint64_destroy(&functionids);
 
